# signer-flow

./: .justfile  Cargo.toml  README.md  architecture.drawio  deny.toml  signer-rest-api.dockerfile  signer-service.dockerfile
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
k8s/: confluent-platform-singlenode.yaml  singer-flow.yaml
signer-rest-api/: Cargo.toml
signer-rest-api/src/: lib.rs  main.rs  rest.rs  sign_producer.rs  signed_topic_consumer.rs  worker.rs
signer-service/: .justfile  Cargo.toml
signer-service/src/: main.rs
